tests/ui/requires_on_struct.stderr
error: custom attribute panicked
 --> tests/ui/requires_on_struct.rs:3:1
  |
3 | #[requires(true)]
  | ^^^^^^^^^^^^^^^^^
  |
  = help: message: expected `fn`

error[E0425]: cannot find value `NotAFunction` in this scope
 --> tests/ui/requires_on_struct.rs:7:13
  |
7 |     let _ = NotAFunction;
  |             ^^^^^^^^^^^^ not found in this scope
