tests/ui/requires_on_struct.rs
use contracts::requires;

#[requires(true)]
struct NotAFunction;

fn main() {
    let _ = NotAFunction;
}
